perf: enable Generational ZGC and add advanced performance guides to README